Собрань шапка проекта

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,221 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  background-color: #000028;
+ 
+  --accent-color: #FF0070;
+  --text-color: var(--accent-color);
+  --title-color: #DB00FF;
+  --title-border-color: none;
+  --text-decor: var(--accent-color);
+  --title-text-color: #000028;
 }
+
+
+
+:root.theme_dark {
+  
+  --accent-color: #FF0070;
+  --text-color: var(--accent-color);
+  --title-color: #DB00FF;
+  --title-border-color: none;
+  --text-decor: var(--accent-color);
+  --title-text-color: #000028;
+  
+ 
+  
+}
+
+
+
+@media (prefers-color-scheme: dark) {
+  :root {
+        /* Дублируем переменные тёмной темы */   
+        --accent-color: #FF0070;
+        --text-color: var(--accent-color);
+        --title-color: #DB00FF;
+        --title-border-color: none;
+        --text-decor: var(--accent-color);
+        --title-text-color: #000028;
+        
+    }
+    .theme_dark .decor_rec {
+      display: inherit;
+    }
+    
+ 
+}
+.theme_dark .decor_rec {
+  display: inherit;
+}
+
+.theme_dark .decorated-zone {
+  background-image: url(../images/cover-image-dark.png);
+  width: auto;
+  background-position: bottom;
+}
+/* Остальные стили */ 
+
+
+@media (width <= 375px) {
+  .theme_dark .header {
+    position: relative;
+    display: grid;
+    grid-template-rows:calc(36%) calc(17%) calc(41.5%);
+  }  
+
+  .theme_dark .decorated-zone {
+    background-image: url(../images/cover-image-dark.png);
+    width: 100%;
+    background-size: cover;
+   background-repeat: no-repeat;
+    height: 668px;
+  
+  }
+  
+   .theme_dark .header__text {
+    margin-inline: 10px;
+    margin-block-start: 130px;
+    margin-block-end: 30px;
+   }
+   
+   .theme_dark .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-block-start: 75px;
+    margin-inline-end: 8px;
+    gap: 13px;
+   }
+   .theme_dark .header__title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    margin-inline-start: 10px;
+   }
+   .theme_dark .decor_corner::before{
+    top: 95%;
+    left: 10px;
+   }
+   .theme_dark .decor_corner::after {
+    top: 1.5%;
+  left: 91%;
+   }
+   .theme_dark .decor_rec::after {
+    top: 4%;
+    left: 81%;
+   }
+   .theme_dark .decor_rec::before {
+    top: 7%;
+    left: 92.5%;
+   }
+   .theme_dark .header__theme-menu-button_active:hover {
+    border: 1px solid rgb(255 0 112 / 0.5);
+  }
+  .theme_dark .header__theme-menu-button_active:focus {
+    border: none;
+  }
+
+  .theme_dark .header__theme-menu-button_active:focus-visible {
+    border-bottom: 1px solid rgb(255 0 112 / 0.5);
+  }
+
+ } 
+
+
+@media (376px <= width < 769px) {
+  .theme_dark .header {
+    position: relative;
+    display: grid;
+    grid-template-rows:calc(45.5%) calc(16%) calc(41.5%);
+  }  
+  .theme_dark .decorated-zone {
+   background-image: url(../images/cover-image-dark.png);
+   width: 100%;
+   background-size: cover;
+  background-repeat: no-repeat;
+  height: 1024px; 
+ }
+ .theme_dark .header__text {
+  margin-block-start: 97px;
+  margin-inline-start: min(50%);
+  margin-block-end: 212px;
+ }
+ 
+ .theme_dark .header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-block-start: 196px;
+  margin-inline-end: 20px;
+  gap: 10px;
+ }
+ .theme_dark .decor_corner::before{
+  top: 96%;
+ }
+ .theme_dark .decor_corner::after {
+left: 94%;
+ }
+ .theme_dark .decor_rec::after {
+  left: 89%;
+ }
+ .theme_dark .decor_rec::before {
+  left: 94.5%;
+ }
+  .theme_dark .header__theme-menu-button_active:hover {
+    border: 1px solid rgb(255 0 112 / 0.5);
+  }
+  .theme_dark .header__theme-menu-button_active:focus {
+    border: none;
+  }
+
+  .theme_dark .header__theme-menu-button_active:focus-visible {
+    border-bottom: 1px solid rgb(255 0 112 / 0.5);
+  }
+
+ } 
+
+@media (769px <= width < 1025px) {
+  .theme_dark .decorated-zone {
+    background-image: url(../images/cover-image-dark.png);
+    width: 100%;
+    background-position: bottom;
+  }
+  .theme_dark .header__text {
+   margin-inline-start: 50%;
+  }
+  
+  .theme_dark .header__theme-menu-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    
+    margin-block-start: 20px;
+    gap: 6px;
+  }
+  .theme_dark .decor_corner::before{
+   top: 94%;
+  }
+  .theme_dark .decor_corner::after {
+ left: 96%;
+  }
+  .theme_dark .decor_rec::after {
+   left: 92%;
+  }
+  .theme_dark .decor_rec::before {
+   left: 96.5%;
+  }
+  .theme_dark .header__theme-menu-button_active:hover {
+    border: 1px solid rgb(255 0 112 / 0.5);
+  }
+  .theme_dark .header__theme-menu-button_active:focus {
+    border: none;
+  }
+
+  .theme_dark .header__theme-menu-button_active:focus-visible {
+    border-bottom: 1px solid rgb(255 0 112 / 0.5);
+  }
+ 
+} 
+ 
+ 
+ 
