--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,224 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #FF0070;
+  --text-color: #353430;
+  --title-color: #FFC2E6;
+  --title-border-color: #000000;
+  --text-decor: #FF8DCB;
+  --title-text-color: var(--text-color:);
+
+  background-color: #ffeef6;
+  
 }
+
+
+:root.theme_light {
+  
+  --accent-color: #FF0070;
+  --text-color: #353430;
+  --title-color: #FFC2E6;
+  --title-border-color: #000000;
+  --text-decor: #FF8DCB;
+  --title-text-color: var(--text-color:);
+  
+}
+
+
+
+/* Остальные стили */
+
+@media (prefers-color-scheme: light) {
+:root {
+      /* Дублируем переменные светлой темы */   
+      --accent-color: #FF0070;
+      --text-color: #353430;
+      --title-color: #FFC2E6;
+      --title-border-color: #000000;
+      --text-decor: #FF8DCB;
+      --title-text-color: var(--text-color:);
+      
+  }
+ 
+  
+  .decor_rec {
+    display: none;
+  }
+  
+}
+/* Остальные стили */ 
+
+.decor_rec {
+  display: none;
+}
+
+
+.theme_light .decorated-zone {
+  background-image: url(../images/cover-image-light.png);
+  width: 100%;
+  background-position: bottom;
+}
+
+
+@media (width <= 375px) {
+  .theme_light .header {
+    position: relative;
+    display: grid;
+    grid-template-rows:calc(36%) calc(17%) calc(41.5%);
+  }  
+
+  .theme_light .decorated-zone {
+    background-image: url(../images/cover-image-light.png);
+    width: 100%;
+    background-size: cover;
+   background-repeat: no-repeat;
+    height: 668px;
+  
+  }
+  
+   .theme_light .header__text {
+    margin-inline: 10px;
+    margin-block-start: 130px;
+    margin-block-end: 30px;
+   }
+   
+   .theme_light .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-block-start: 75px;
+    margin-inline-end: 8px;
+    gap: 13px;
+   }
+   .theme_light .header__title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    margin-inline-start: 10px;
+   }
+   .theme_light .decor_corner::before{
+    top: 95%;
+    left: 10px;
+   }
+   .theme_light .decor_corner::after {
+    top: 1.5%;
+  left: 91%;
+   }
+   .theme_light .decor_rec::after {
+    top: 4%;
+    left: 81%;
+   }
+   .theme_light .decor_rec::before {
+    top: 7%;
+    left: 92.5%;
+   }
+   .theme_light .header__theme-menu-button_active:hover {
+    border: 1px solid rgb(53 52 48 / 0.5);
+  }
+  .theme_light .header__theme-menu-button_active:focus {
+    border: none;
+  }
+
+  .theme_light .header__theme-menu-button_active:focus-visible {
+    border-bottom: 1px solid rgb(53 52 48 / 0.5);
+  }
+
+ } 
+
+
+@media (376px <= width < 769px) {
+  .theme_light .header {
+    position: relative;
+    display: grid;
+    grid-template-rows:calc(45.5%) calc(16%) calc(41.5%);
+  }  
+  .theme_light .decorated-zone {
+   background-image: url(../images/cover-image-light.png);
+   width: 100%;
+   background-size: cover;
+  background-repeat: no-repeat;
+  height: 1024px; 
+ }
+ .theme_light .header__text {
+  margin-block-start: 97px;
+  margin-inline-start: min(50%);
+  margin-block-end: 212px;
+ }
+ 
+ .theme_light .header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-block-start: 196px;
+  margin-inline-end: 20px;
+  gap: 10px;
+ }
+ .theme_light .decor_corner::before{
+  top: 96%;
+ }
+ .theme_light .decor_corner::after {
+left: 94%;
+ }
+ .theme_light .decor_rec::after {
+  left: 89%;
+ }
+ .theme_light .decor_rec::before {
+  left: 94.5%;
+ }
+  .theme_light .header__theme-menu-button_active:hover {
+    border: 1px solid rgb(53 52 48 / 0.5);
+  }
+  .theme_light .header__theme-menu-button_active:focus {
+    border: none;
+  }
+
+  .theme_light .header__theme-menu-button_active:focus-visible {
+    border-bottom: 1px solid rgb(53 52 48 / 0.5);
+  }
+
+ } 
+
+@media (769px <= width < 1025px) {
+  .theme_light .decorated-zone {
+    background-image: url(../images/cover-image-light.png);
+    width: 100%;
+    background-position: bottom;
+  }
+  .theme_light .header__text {
+   margin-inline-start: 50%;
+  }
+  
+  .theme_light .header__theme-menu-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    
+    margin-block-start: 20px;
+    gap: 6px;
+  }
+  .theme_light .decor_corner::before{
+   top: 94%;
+  }
+  .theme_light .decor_corner::after {
+ left: 96%;
+  }
+  .theme_light .decor_rec::after {
+   left: 92%;
+  }
+  .theme_light .decor_rec::before {
+   left: 96.5%;
+  }
+  .theme_light .header__theme-menu-button_active:hover {
+    border: 1px solid rgb(53 52 48 / 0.5);
+  }
+  .theme_light .header__theme-menu-button_active:focus {
+    border: none;
+  }
+
+  .theme_light .header__theme-menu-button_active:focus-visible {
+    border-bottom: 1px solid rgb(53 52 48 / 0.5);
+  }
+ 
+} 
+ 
+ 
+ 
