--- a/styles/light.css
+++ b/styles/light.css
@@ -14,7 +14,8 @@
   --title-color: #FFC2E6;
   --title-border-color: #000000;
   --text-decor: #FF8DCB;
-  --title-text-color: var(--text-color:);
+  --title-text-color: var(--text-color);
+  --heading-color: var(--text-color);
 
   background-color: #ffeef6;
   
@@ -28,7 +29,8 @@
   --title-color: #FFC2E6;
   --title-border-color: #000000;
   --text-decor: #FF8DCB;
-  --title-text-color: var(--text-color:);
+  --title-text-color: var(--text-color);
+  --heading-color: var(--text-color);
   
 }
 
@@ -128,7 +130,82 @@
   .theme_light .header__theme-menu-button_active:focus-visible {
     border-bottom: 1px solid rgb(53 52 48 / 0.5);
   }
+  .theme_light .content_top-container {
+    display: block;
+  }
+  .theme_light .content_top {
+    margin-inline: 10px;
+    margin-block-start: 40px;
+    margin-block-end: 58px;
+  }
+  .theme_light .heading {
+    margin-block-end: 20px;
+  }
+  .theme_light .content_top-container .card_block:first-of-type {
+    margin-block-end: 28px;
+      
+  }
+  .theme_light .content_middle-container {
+    display: block;
+  }
+  .theme_light .content_middle {
+    margin-inline: 10px;
+    margin-block-end: 56px;
+  }
+  .theme_light .content_middle-heading {
+    margin-block-end: 20px;
+    margin-inline-end: 0px;
+  }
+  .theme_light .content_middle-container .card_block:nth-last-child(2) {
+    margin-inline: 0px;
+    margin-block: 0px;
+  }
+  .theme_light .content_middle-container .card_block .paragraph {
+    margin-block-end: 25px;
+  }
+  .theme_light .content_bottom-container {
+    display: block;
+  }
+  .theme_light .content_bottom {
+    margin-inline: 10px;
+    margin-block-end: 53px;
+  }
+  .theme_light .content_bottom-heading {
+    margin-block-end: 20px;
+    padding-inline-end: 0px;
+  }
 
+  .theme_light .content_bottom-container .card_block:first-of-type .card_title:first-of-type {
+    margin-block-end: 20px;
+    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
+    font-weight: 700;
+      
+  }
+  .theme_light .content_bottom-container .card_block .card_title {
+   font-weight: 400;
+   font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
+  }
+  .theme_light .content_bottom-container .card_block:not(:last-of-type) {
+    margin-block-end: 26px;
+  }
+  .theme_light .content_gallery {
+    margin-inline: 10px;
+    margin-block-end: 40px;
+  }
+  .theme_light .content_gallery-container {
+    display: block;
+    margin-block-start: 10px;
+  }
+  .theme_light .content_picture {
+    width: min(100%, 355px);
+    height: 100%;
+    margin-block-end: 6px;
+  }
+ 
+  .theme_light .content_gallery-heading {
+    margin-block-end: 10px;
+  }
+ 
  } 
 
 
@@ -181,7 +258,67 @@ left: 94%;
   .theme_light .header__theme-menu-button_active:focus-visible {
     border-bottom: 1px solid rgb(53 52 48 / 0.5);
   }
+  .theme_light .heading {
+    padding-right: 30px;
+  }
+  .theme_light .content_top-container {
+   grid-template-columns: calc(36%) calc(64%);
+       
+  }
 
+  .theme_light .content_middle-container {
+    display: block;
+    
+  }
+  .theme_light .content_middle-container .card_block:nth-last-child(2) {
+    margin-inline: 0px;
+    margin-block: 23px;
+  }
+
+  .theme_light .content_bottom-container .card_block:first-of-type .card_title:first-of-type {
+    margin-block-end: 20px;
+    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
+    font-weight: 700;
+      
+  }
+  .theme_light .content_bottom-container .card_block .card_title {
+   font-weight: 400;
+   font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
+  }
+  .theme_light .content_bottom-container .card_block:not(:last-of-type) {
+    margin-block-end: 26px;
+  }
+  .theme_light .content_bottom-container {
+    grid-template-columns: calc(35%) calc(65%);
+  }
+  .theme_light .content_gallery-container {
+    display: grid;
+    grid-template-columns: 31% 32% 31%;
+    grid-template-rows: 25% 29% 41%;
+    height: 100%;
+  }
+
+  .theme_light .sunset {
+    grid-area: sunset;
+   width: min(100%, 479px);
+  
+  }
+  .theme_light .ice-cream {
+    grid-area: ice-cream;
+    width: min(100%, 229px);
+  }
+  .theme_light .tape {
+    grid-area: tape;
+    width: min(100%, 229px);
+  }
+  .theme_light .books {
+     grid-area: books;
+    width: min(100%, 230px);
+  }
+  .theme_light .street {
+    grid-area: street;
+    width: min(100%, 479px);
+  }
  } 
 
 @media (769px <= width < 1025px) {
